fix: spacing

--- a/src/global.css
+++ b/src/global.css
@@ -26,7 +26,10 @@ section {
     background-color: white;   /* bg-white */
     margin-top: 1.25rem;       /* my-5 (my-5 applies to both top and bottom) */
     margin-bottom: 1.25rem;    /* my-5 */
-    padding: 1.25rem;          /* p-5 */
+    padding-top: 1.25rem;          /* p-5 */
+    padding-bottom: 1.25rem;
+    padding-left: 1.625rem;
+    padding-right: 1.625rem;
     border-radius: 0.75rem;    /* rounded-xl */
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* shadow-lg */
 }
